# chart-svg-serve

./: chart-svg-serve.cabal  hie.yaml  readme.md  stack.yaml
app/: chart-svg-serve.hs
src/Chart/: Page.hs  Serve.hs
