cabal-version: 2.4
name:          chart-svg-serve
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/chart-svg-serve#readme
bug-reports: https://github.com/tonyday567/chart-svg-serve/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/chart-svg-serve

library
  hs-source-dirs:
    src
  default-extensions:
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    attoparsec >= 0.13 && < 0.14,
    base >=4.7 && <5,
    box >= 0.6 && < 0.7,
    box-socket >= 0.1 && < 0.2,
    chart-svg,
    generic-lens >= 1.2 && < 3.0,
    lens >= 4 && < 5,
    lucid >= 2.9 && < 2.10,
    numhask >= 0.7 && < 0.8,
    numhask-space >= 0.7 && < 0.8,
    pretty-simple >= 3.2 && < 3.3,
    text >= 1.2 && < 1.3,
    transformers >= 0.5 && < 0.6,
    unordered-containers >= 0.2.10 && < 0.3,
    web-rep >= 0.8 && < 0.9,
  exposed-modules:
    Chart.Page
    Chart.Serve

  other-modules:
  default-language: Haskell2010

executable chart-svg-serve
  main-is: chart-svg-serve.hs
  hs-source-dirs: app
  build-depends:
    base >= 4.7 && < 5,
    chart-svg >= 0.2 && < 0.3,
    chart-svg-serve,
    lens >= 4 && < 5,
    lucid >= 2.9 && < 2.10,
    numhask >= 0.7 && < 0.8,
    web-rep >= 0.8 && < 0.9,
  default-language: Haskell2010
  default-extensions:
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
